# game-2048

./: .gitignore  CMakeLists.txt  README.md
build_scripts/: build_and_run.bat  build_and_run_mac.sh
include/: config.h  game_logic.h  linked_list.h  my_library.h  rendering.h  saving.h  terminal_rendering.h  user_input.h
src/: game_logic.cpp  main.cpp  rendering.cpp  saving.cpp  terminal_rendering.cpp  user_input.cpp
